--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "if-env": "^1.0.4",
     "mysql2": "^3.1.0",
     "node": "^19.6.1",
+    "nodemailer": "^7.0.6",
     "npm": "^9.4.2",
     "react": "^18.2.0",
     "sequelize": "^6.28.0",
